# custom-rust-dist

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: gui-tests.yml  publish-doc.yml  release.yml  standard-tests.yml
ci/: release.sh  run.sh
ci/docker/dist-aarch64-linux/: Dockerfile
ci/docker/dist-aarch64-linux-gnu/: Dockerfile
ci/docker/dist-aarch64-linux-musl/: Dockerfile
ci/docker/dist-x86-64-linux/: Dockerfile
ci/docker/dist-x86-64-linux-gnu/: Dockerfile
ci/docker/dist-x86-64-linux-musl/: Dockerfile
ci/docker/dist-x86_64-linux/: Dockerfile
ci/scripts/: install-musl-gcc.sh  install-nodejs.sh  install-tauri-cli.sh  linux-dist.sh  run-with-docker.sh  run-without-docker.sh  windows-dist.sh
locales/: en.json  zh-CN.json
resources/: toolkits.toml  toolset_manifest.toml
resources/templates/: channel-rust.template
resources/toolkit-manifest/offline/: basic.toml  community.toml
resources/toolkit-manifest/online/: basic.toml  community.toml
rim_dev/: Cargo.toml  build.rs
rim_dev/src/: common.rs  dist.rs  dist_readme  main.rs  toolkits_parser.rs  vendor.rs
rim_dev/src/mocked/: installation.rs  manager.rs  mod.rs  server.rs
rim_gui/: .prettierrc  notification.html  vite.config.ts
rim_gui/src/: App.vue  Notification.vue  notification.ts
rim_gui/src-tauri/: Cargo.toml  tauri.conf.json
rim_gui/src-tauri/src/: common.rs  consts.rs  error.rs  installer_mode.rs  main.rs  manager_mode.rs  notification.rs
rim_gui/src/components/: BaseButton.vue  BaseToast.vue  LoadingMask.vue  Titlebar.vue
rim_gui/src/theme/: index.ts
rim_gui/src/utils/: installConf.ts  invokeCommand.ts  managerConf.ts
rim_test/rim-test-macro/: Cargo.toml
rim_test/rim-test-macro/src/: lib.rs
rim_test/rim-test-support/: Cargo.toml
rim_test/rim-test-support/src/: lib.rs  paths.rs  (+2 more)
src/: lib.rs
src/cli/: common.rs  install.rs  list.rs  mod.rs  update.rs
src/core/: components.rs  install.rs  mod.rs  rustup.rs  toolkit.rs  tools.rs  try_it.rs  uninstall.rs  update.rs
src/utils/: download.rs  extraction.rs  log.rs  mod.rs  process.rs  progress_bar.rs
tests/testsuite/: env.rs  file_extract.rs  main.rs
(+36 files in other folders)
