[package]
name = "rim"
version = "0.4.0"
edition = "2021"
description = "An interactive Rust installation manager"
rust-version = "1.80.0" # Dominated by 'std::sync::LazyLock'

[features]
default = []
no-web = []
gui = []

[[bin]]
name = "rim-cli"
path = "src/bin/rim_cli.rs"

[workspace]
members = ["rim_gui/src-tauri", "rim_dev"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
url = { version = "2", features = ["serde"] }
toml = "0.8.15"
tempfile = "3"
indexmap = { version = "2.5", features = ["serde"] }
rust-i18n = "3"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
tar = "0.4"
xz2 = "0.1"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["stream", "native-tls-vendored"] }
serde.workspace = true
url.workspace = true
libc = "0.2"
toml.workspace = true
tempfile.workspace = true
zip = "2"
dirs = "5.0.1"
sevenz-rust = "0.6.1"
tar.workspace = true
xz2.workspace = true
flate2 = "1"
cfg-if = "1"
env_proxy = "0.4.1"
indexmap.workspace = true
rust-i18n.workspace = true
sys-locale = "0.3.1"
log.workspace = true
fern.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }
semver = "1.0.23"
self-replace = "1"
os_pipe = "1.2.1"
tokio = { version = "1.43.0", features = ["time", "rt-multi-thread", "macros"] }

[dev-dependencies]
rim-test-support = { version = "0.1.0", path = "rim_test/rim-test-support" }

[target."cfg(windows)".dependencies]
winreg = "0.52.0"
winapi = { version = "0.3", features = ["winuser", "winbase"] }
cc = "1"
